2011-04-07  Sancho Lerena <slerena@artica.es>

	* index.php: Added bassic support for doing any page a PDF :-)

	* include/fonts: Added new font directory.

	* include/mpdf51: New PDF library.
	
	* include/pdf: Removed un-used PDF library.
	
	* include/Image: Removed old Image:Graph PEAR library.
	
	* include/calendar.js: Removed old javascript, not used in that location.
	
	* operation/projects/project_detail.php: Added first sample of PDF reports
	
2011-04-07  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Fixed some 
	pie graphs issues like legend position

2011-04-07  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_fsgraph.php
	include/graphs/functions_utils.php: Fixed vertical bar flash
	graphs and added reverse_data function to utils

2011-04-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php: Fixed last commit bug
	and added default fine colors system to pchart

2011-04-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/functions_html.php
	include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/functions_reporting.php
	operation/projects/project_detail.php
	operation/user_report/monthly_graph.php: Changed the way of
	transfer the graphics data and fixed bugs. Added new features
	to graphs as colors, etc. And fixed some bugs

2011-04-06  Sancho Lerena <slerena@artica.es>

	* operation/projects/project_download_file.php: Fixed
	problem with filenames with spaces.

2011-04-06  Sancho Lerena <slerena@artica.es>

	* include/functions_graph.php: Added new graphs and
	fixed old one.

	* include/graphs/functions_pchart.php: Removed a debug
	line.

	* operation/projects/project_detail.php: Project detail
	show new graphs.

2011-04-06  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed avoid